# swagger_output.json
@@ -5,7 +5,7 @@
     "title": "My API",
     "description": "Documentation automatically generated by the <b>swagger-autogen</b> module."
   },
-  "host": "13.233.186.49:8000",
+  "host": "localhost:8000",
   "basePath": "/api",
   "schemes": [
     "http",
@@ -182,6 +182,19 @@
             "type": "string",
             "enum": [
               "titles_only"
+            ]
+          },
+          {
+            "name": "privacy_settings",
+            "in": "query",
+            "type": "string",
+            "enum": [
+              "Tag",
+              "Connect",
+              "Message",
+              "Group_Request",
+              "Schedules",
+              "Posts_Comment"
             ]
           }
         ],
